tests/multiplatform_off/multiplatform_off.exp
Error ------------------------------------------------------------------------------------- test_interface_import.js:5:1

Cannot cast `o1` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test_interface_import.js:5:1
   5| o1 as empty; // error
      ^^

References:
   test_interface_import.js:3:17
   3| declare var o1: MyType;
                      ^^^^^^ [1]
   test_interface_import.js:5:7
   5| o1 as empty; // error
            ^^^^^ [2]



Found 1 error
